@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ * https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -56,7 +56,7 @@ class DefaultServiceDefinition<S> implements ServiceDefinition<S> {
     public <X extends Throwable> S orElseThrow(Supplier<? extends X> exceptionSupplier) throws X {
         final Class<S> type = loadedClass.orElseThrow(exceptionSupplier);
         try {
-            return type.newInstance();
+            return type.getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             throw exceptionSupplier.get();
         }
@@ -66,7 +66,7 @@ class DefaultServiceDefinition<S> implements ServiceDefinition<S> {
     public S load() {
         return loadedClass.map(aClass -> {
             try {
-                return aClass.newInstance();
+                return aClass.getDeclaredConstructor().newInstance();
             } catch (Throwable e) {
                 throw new ServiceConfigurationError("Error loading service [" + aClass.getName() + "]: " + e.getMessage(), e);
             }
